cabal-version:       2.4
name:                xsd-isogen

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            XSD representation and xml-isogen description generator from XSD
license:             BSD-3-Clause
license-file:        LICENSE
author:              Denis Redozubov
maintainer:          denis.redozubov@gmail.com
category:            Data
extra-source-files:  CHANGELOG.md


library
  -- Modules exported by the library.
  exposed-modules:     Text.XSD
                     , Text.XSD.Parser
                     , Text.XSD.Internal

  other-extensions:    TemplateHaskell

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.12.0.0
                     , bytestring
                     , lens >= 4.13
                     , text
                     , xml-conduit

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
