cabal-version:       2.4
name:                xsd-parser

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Haskell representation and parser of the subset of xsd schema description format
license:             BSD-3-Clause
license-file:        LICENSE
author:              Denis Redozubov
maintainer:          denis.redozubov@gmail.com
category:            Data
extra-source-files:  CHANGELOG.md


library
  -- ghc-options:         -Werror
  -- Modules exported by the library.
  exposed-modules:     Text.XSD
                     , Text.XSD.Parser
                     , Text.XSD.Internal

  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , QuasiQuotes
                     , TemplateHaskell

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.12.0.0
                     , bytestring
                     , containers
                     , lens >= 4.13
                     , mtl
                     , text
                     , template-haskell
                     , transformers
                     , xml-conduit
                     , writer-cps-mtl
                     , uniplate

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:      base
                    , bytestring
                    , hspec
                    , transformers
                    , xml-conduit
                    , xsd-parser
  default-language:   Haskell2010
  default-extensions:  CPP
                     , DeriveGeneric
                     , FlexibleInstances
                     , LambdaCase
                     , OverloadedStrings
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies
  ghc-options:        -Wall -fno-warn-missing-signatures