cabal-version:       2.4
name:                xsd-parser

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Haskell representation and parser of the subset of xsd schema description format
license:             BSD-3-Clause
license-file:        LICENSE
author:              Denis Redozubov
maintainer:          denis.redozubov@gmail.com
category:            Data
extra-source-files:  CHANGELOG.md


library
  -- Modules exported by the library.
  exposed-modules:     Xsd
                     , Xsd.Types
                     , Xsd.Parser

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.12.0.0
                     , bytestring
                     , containers
                     , lens >= 4.13
                     , mtl
                     , text
                     , template-haskell
                     , transformers
                     , xml-conduit
                     , writer-cps-mtl
                     , uniplate
                     , network-uri
                     , http-client
                     , http-client-tls
                     , filepath

  -- Directories containing source files.
  hs-source-dirs:      src
  ghc-options:        -Wall

  -- Base language which the package is written in.
  default-language:    Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Spec
  build-depends:      base
                    , bytestring
                    , text
                    , hspec
                    , transformers
                    , xml-conduit
                    , containers
                    , xsd-parser
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite xsts
  type:               exitcode-stdio-1.0
  hs-source-dirs:     xsts-test
  main-is:            Main.hs
  build-depends:      base
                    , text
                    , filepath
                    , xml-conduit
                    , xsd-parser
  default-language:   Haskell2010
  ghc-options:        -Wall
